--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,7 @@
 FROM node:16.16.0
 WORKDIR /pets-service
+COPY package*.json ./
+RUN npm install
+RUN npx ngcc --properties ec2023 browser module main --first-only --create-ivy-enry-points
 COPY . .
-RUN npm install -g @angular/cli@16.1.0 \
-        npm install @angular-devkit/build-angular --force
-
+RUN npm build
