--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,6 @@
-FROM node:16.16.0
+FROM node:16.16.0 AS build
 WORKDIR /pets-service
-COPY package*.json ./
+COPY frontend/package*.json ./
 RUN npm install
 RUN npx ngcc --properties ec2023 browser module main --first-only --create-ivy-enry-points
 COPY . .
