--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     ports:
       - 4200:4200
     volumes:
-      - /opt/star-burger/staticfiles/:/star-burger/staticfiles/
+      - /opt/pets-service/staticfiles/:/pets-service/staticfiles/
     command: >
       bash -c "ng serve"
 
@@ -32,8 +32,8 @@ services:
     container_name: backend
     restart: always
     volumes:
-      - /opt/star-burger/staticfiles/:/star-burger/staticfiles/
-      - /opt/star-burger/media/:/star-burger/media/
+      - /opt/pets-service/staticfiles/:/pets-service/staticfiles/
+      - /opt/pets-service/media/:/pets-service/media/
     ports:
       - 8081:8081
     env_file:
