--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,5 @@
-FROM node:16.16.0 AS build
+FROM node:16.16.0
 WORKDIR /pets-service/frontend
 COPY . .
+COPY /frontend/package*.json ./
 RUN npm install
-RUN npm install -g @angular/cli@16.1.0
-COPY . .
