--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       - /opt/pets-service/staticfiles/:/pets-service/staticfiles/
     command: >
-      bash -c "cd /frontend $$ ng serve"
+      bash -c "cd /frontend && ng serve"
 
 
   backend:
