Correct gunicorn command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,4 +45,4 @@ services:
       postgres:
         condition: service_started
     command: >
-      bash -c "gunicorn -w 5 -b 0.0.0.0:8080 pets_service.wsgi:application"
+      bash -c "gunicorn -w 5 -b 0.0.0.0:8080 pets_viewer.wsgi:application"
