Finalize docker set up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     volumes:
       - .:/frontend
       - /frontend/node_modules
+    command: >
+      bash -c "cd /pets-service/frontend && ng serve --disable-host-check"
 
 
   backend:
@@ -35,7 +37,7 @@ services:
       - /opt/pets-service/staticfiles/:/pets-service/staticfiles/
       - /opt/pets-service/media/:/pets-service/media/
     ports:
-      - 8080:8080
+      - 8000:8000
     env_file:
       - .env
     depends_on:
@@ -44,4 +46,4 @@ services:
       postgres:
         condition: service_started
     command: >
-      bash -c "gunicorn -w 5 -b 0.0.0.0:8080 pets_viewer.wsgi:application"
+      bash -c "gunicorn -w 5 -b 0.0.0.0:8000 pets_viewer.wsgi:application"
