--- a/frontend/Dockerfile.frontend
+++ b/frontend/Dockerfile.frontend
@@ -1,7 +1,5 @@
 FROM node:16.16.0
-WORKDIR /pets-service/frontend
-COPY /frontend/package*.json ./
-RUN npm install
-RUN npm install -g @angular/cli@16.1.0
+WORKDIR /pets-service
 COPY . .
-CMD ng serve
+EXPOSE 4200
+RUN cd /pets-service/frontend && npm install -g @angular/cli@16.1.0 && npm install @angular-devkit/build-angular --force
